# project-forge

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
docs/: BUILD-STATUS.md  implementation-spec.md  instructions.md
docs/specs/: implementation-spec.md  mode1-spec.md  mode2-spec.md  orchestrator-spec.md  persistence-spec.md  rag-architecture-summary.md  rag-implementation-spec.md  sidebar-docs-spec.md
src/pm_copilot/: __init__.py  app.py  chunking.py  config.py  logging_config.py  mode1_knowledge.py  mode2_knowledge.py  orchestrator.py  org_context.py  persistence.py  prompts.py  rag.py  sidebar_docs.py  state.py  tools.py
tests/: conftest.py
tests/fixtures/: sample_document.md
tests/unit/: conftest.py  test_chunking.py  test_orchestrator.py  test_rag.py  test_tools.py
