[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge"
version = "0.1.0"
description = "Project Forge — AI-powered Product Management assistant"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pm_copilot"]
